test_report.txt

> starter_helpi@0.1.0 test
> react-scripts test --coverage

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/starter_helpi/starter_helpi/node_modules/d3-scale/src/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){export {
                                                                                      ^^^^^^

    SyntaxError: Unexpected token 'export'

    > 1 | import { PieChart, pieArcLabelClasses } from "@mui/x-charts";
        | ^
      2 |
      3 | interface ShowPieChartProps {
      4 |     pieChartValues: string;

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (node_modules/@mui/x-charts/internals/colorScale.js:9:16)
      at Object.<anonymous> (node_modules/@mui/x-charts/context/ZAxisContextProvider.js:12:19)
      at Object.<anonymous> (node_modules/@mui/x-charts/context/index.js:12:29)
      at Object.<anonymous> (node_modules/@mui/x-charts/index.js:24:16)
      at Object.<anonymous> (src/pages/results/components/PieChart.tsx:1:1)
      at Object.<anonymous> (src/pages/results/components/ResultsSection.tsx:3:1)
      at Object.<anonymous> (src/pages/results/ResultsPage.tsx:5:1)
      at Object.<anonymous> (src/App.tsx:7:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)

[0;33mOne of your dependencies, babel-preset-react-app, is importing the
"@babel/plugin-proposal-private-property-in-object" package without
declaring it in its dependencies. This is currently working because
"@babel/plugin-proposal-private-property-in-object" is already in your
node_modules folder for unrelated reasons, but it [1mmay break at any time[0;33m.

babel-preset-react-app is part of the create-react-app project, [1mwhich
is not maintianed anymore[0;33m. It is thus unlikely that this bug will
ever be fixed. Add "@babel/plugin-proposal-private-property-in-object" to
your devDependencies to work around this error. This will make this message
go away.[0m
  
--------------------------------|---------|----------|---------|---------|-------------------
File                            | % Stmts | % Branch | % Funcs | % Lines | Uncovered Line #s 
--------------------------------|---------|----------|---------|---------|-------------------
All files                       |       0 |        0 |       0 |       0 |                   
 src                            |       0 |        0 |       0 |       0 |                   
  App.tsx                       |       0 |        0 |       0 |       0 | 11-18             
  index.tsx                     |       0 |      100 |     100 |       0 | 8-20              
  reportWebVitals.ts            |       0 |        0 |       0 |       0 | 3-10              
 src/components                 |       0 |        0 |       0 |       0 |                   
  Foooter.tsx                   |       0 |        0 |       0 |       0 | 9-32              
  NavBar.tsx                    |       0 |        0 |       0 |       0 | 7                 
  SwitchPage.tsx                |       0 |        0 |       0 |       0 | 6-39              
 src/interfaces                 |       0 |        0 |       0 |       0 |                   
  Alert.ts                      |       0 |        0 |       0 |       0 |                   
  BasicQuestions.ts             |       0 |        0 |       0 |       0 |                   
  DetailedQuestions.ts          |       0 |        0 |       0 |       0 |                   
  HomePage.ts                   |       0 |        0 |       0 |       0 |                   
  NavBar.ts                     |       0 |        0 |       0 |       0 |                   
  ProgressBar.ts                |       0 |        0 |       0 |       0 |                   
  Questions.ts                  |       0 |        0 |       0 |       0 |                   
  ResultsPage.ts                |       0 |        0 |       0 |       0 |                   
  ResultsSection.ts             |       0 |        0 |       0 |       0 |                   
  SwitchPages.ts                |       0 |        0 |       0 |       0 |                   
 src/pages/home                 |       0 |      100 |       0 |       0 |                   
  HomePage.tsx                  |       0 |      100 |       0 |       0 | 8                 
 src/pages/questions            |       0 |        0 |       0 |       0 |                   
  BasicQuestions.tsx            |       0 |        0 |       0 |       0 | 11-146            
  DetailedQuestions.tsx         |       0 |        0 |       0 |       0 | 11-124            
 src/pages/questions/components |       0 |        0 |       0 |       0 |                   
  Alert.tsx                     |       0 |      100 |       0 |       0 | 8-28              
  ProgressBar.tsx               |       0 |        0 |       0 |       0 | 5-17              
 src/pages/results              |       0 |        0 |       0 |       0 |                   
  GPT.ts                        |       0 |        0 |       0 |       0 | 7-184             
  ResultsPage.tsx               |       0 |        0 |       0 |       0 | 13-80             
 src/pages/results/components   |       0 |        0 |       0 |       0 |                   
  GPTInput.tsx                  |       0 |        0 |       0 |       0 | 11-25             
  LoadingScreen.tsx             |       0 |      100 |       0 |       0 | 4                 
  PieChart.tsx                  |       0 |        0 |       0 |       0 | 8-28              
  Replies.tsx                   |       0 |        0 |       0 |       0 | 12-31             
  ResultsSection.tsx            |       0 |      100 |       0 |       0 | 9                 
  ResultsSectionText.tsx        |       0 |      100 |       0 |       0 | 4                 
--------------------------------|---------|----------|---------|---------|-------------------
Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        4.571 s
Ran all test suites.
